--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,7 @@
 body {
   @apply bg-["#121212"]
 }
+
+.primary-btn {
+  @apply bg-black dark:bg-white rounded-md w-fit text-white dark:text-black px-4 py-2
+}
