--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,18 @@
 @tailwind utilities;
 
 * {
-  font-family: "Electrolize", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
-body {
-  @apply bg-["#121212"]
+body{
+	background-color: #000000;
+}
+.section-width {
+	@apply mx-auto w-11/12;
+}
+
+.section-title {
+	@apply text-4xl font-bold
 }
 
 .primary-btn {
